<?xml version="1.0" encoding="utf-8"?>
<org.holoeverywhere.widget.LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <org.holoeverywhere.widget.LinearLayout
            android:id="@+id/mainScreen"
            android:orientation="horizontal"
            android:background="#ffe7e7e7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <org.holoeverywhere.widget.TextView
                android:id="@+id/main_screen"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/main_screen_hint"
                android:gravity="right"
                android:textColor="#ff000000"
                android:textSize="30sp"
                />

        <org.holoeverywhere.widget.Button
                android:id="@+id/backspace"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:background="@android:drawable/ic_input_delete"
                />
    </org.holoeverywhere.widget.LinearLayout>

    <org.holoeverywhere.widget.LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <org.holoeverywhere.widget.LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout
                    android:stretchColumns="*"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    >
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/E"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/E_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/F"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/F_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/open_bracket"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/open"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/operators"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/close_bracket"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/close"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/operators"/>

                </TableRow>
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/D"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/D_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/pow"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/pow"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/operators"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/dividing"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/dividing"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/operators"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/multiplication"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/multiplication"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:textColor="@color/operators"/>
                </TableRow>
            </TableLayout>
            <org.holoeverywhere.widget.Button
                    android:id="@+id/minus"
                    android:text="@string/minus"
                    style="@style/Holo.Button.Small.Light"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:textColor="@color/operators"/>
        </org.holoeverywhere.widget.LinearLayout>

        <org.holoeverywhere.widget.LinearLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout
                    android:stretchColumns="*"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/C"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/C_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/seven"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/seven"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/eight"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/eight"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/nine"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/nine"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                </TableRow>
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/B"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/B_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/four"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/four"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/five"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/five"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/six"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/six"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                </TableRow>
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/A"
                            style="@style/Holo.Button.Small.Light"
                            android:enabled="false"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/A_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/hex"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/one"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/one"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/two"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/two"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/three"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/three"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                </TableRow>
            </TableLayout>
            <org.holoeverywhere.widget.Button
                    android:id="@+id/plus"
                    android:text="@string/plus"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    style="@style/Holo.Button.Small.Light"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:textColor="@color/operators"/>
        </org.holoeverywhere.widget.LinearLayout>

        <org.holoeverywhere.widget.LinearLayout
                android:layout_weight="5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout
                    android:stretchColumns="*"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TableRow
                        android:layout_weight="1"
                        >
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/delete"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/C_button"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="#ffff504a"
                            />
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/zero"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/zero"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                    <org.holoeverywhere.widget.Button
                            android:id="@+id/dot"
                            style="@style/Holo.Button.Small.Light"
                            android:layout_width="20dp"
                            android:layout_height="match_parent"
                            android:text="@string/dot"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="@color/digits"/>
                </TableRow>

            </TableLayout>
            <org.holoeverywhere.widget.Button
                    android:id="@+id/equity"
                    android:layout_weight="2"
                    android:text="@string/equity"
                    style="@style/Holo.Button.Small.Light"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/operators"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
        </org.holoeverywhere.widget.LinearLayout>


    </org.holoeverywhere.widget.LinearLayout>


</org.holoeverywhere.widget.LinearLayout>